# lotterydraft

./: .gitignore  LICENCE  README.md  pyproject.toml
lotterydraft/: lottery.py  main.py  model.py
test/: conftest.py  test_data.yaml  test_lottery.py  test_model.py
